Remove onboarding attempt flag
